--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "src/app.js",
   "scripts": {
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,10 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "eje": "^1.0.0",
+    "ejs": "^3.1.9",
+    "expres": "^0.0.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
