--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "homepage": "https://github.com/OsavivV/MundoTech#readme",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
-    "eje": "^1.0.0",
     "ejs": "^3.1.9",
     "expres": "^0.0.5",
     "express": "^4.18.2",
