--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "expres": "^0.0.5",
